fixed extra right space on mobile

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,4 +1,7 @@
-html{ height:100%; margin:0; }
+html{ height:100%; margin:0; 
+  width: 100%;
+  overflow-x: hidden;
+}
 
 body{
 
@@ -8,8 +11,9 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-
+  
     display:flex; 
+    width: 100%;
     flex-direction:column; 
 }
 
